Revert "fix: The cross button should be right aligned inside the input box (#2370)"
This reverts commit 2cd03e0609829aad24f5ae4680e1d5ec6dbf3eda.

--- a/src/app/fyle/team-reports/team-reports.page.scss
+++ b/src/app/fyle/team-reports/team-reports.page.scss
@@ -38,6 +38,7 @@
     mat-form-field {
       ::ng-deep .mat-mdc-text-field-wrapper {
         padding-left: 6px;
+        padding-right: 6px;
       }
 
       ::ng-deep .mat-icon {
@@ -63,6 +64,7 @@
     }
 
     &-close {
+      margin: -10px;
       font-size: 18px;
     }
   }
